# mu2OS

./: .gitignore  .gitmodules  app.py  pyproject.toml  re_discord.py  requirements.txt  setup.cfg
dubious/: pory.py
dubious/discord/: api.py  disc.py  req.py
pokeapi/: typ.py  zyg.py
src/docparse/: docs_pokeapi.txt  parser.py  re_discord.py  re_discord_ts.py  re_pokeapi.py
src/dubious/: callback.py  pory.py  zap.py
src/dubious/discord/: api.py  disc.py  req.py
src/dubiousdiscord.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mu2OS/: app.py
src/pokeapi/: _api_old.py  api.py  zyg.py
